--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -53,3 +53,49 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   }
 }
 
+// Show cart at all times
+// specificity so it only affects the page if the user menu is active
+.absolute-cart-box > div {
+  display: block!important;
+  visibility: visible!important;
+  opacity: 1!important;
+  
+  // .sqs-pill-shopping-cart-content
+  min-width: 220px;
+  border-radius: 3px;
+  height: 26px;
+  cursor: pointer;
+  white-space: nowrap;
+  line-height: 18px;
+  font-size: 12px;
+  padding: 10px 15px;
+
+  // .sqs-pill-shopping-cart-content.dark
+  box-shadow: 0 0 0 1px rgba(0,0,0,.085), 0 1px 0 0 rgba(0,0,0,.15);
+  border: 1px solid rgba(255,255,255,.05);
+  color: #ddd;
+  background-color: #111;
+  background-image: linear-gradient(#1e1e1e,#040404);
+}
+
+.sqs-pill-shopping-cart-content {
+  min-width: 0;
+  border-radius: 0;
+  height: auto;
+  padding: 0;
+  display: inline-block;
+
+  &.dark {
+    box-shadow: none;
+    border: 0;
+    color: inherit;
+    background-color: transparent;
+    background-image: none;
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  .top-navigation-position-above-banner .absolute-cart-box {
+    top: 25px;
+  }
+}
