--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -55,20 +55,20 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
 
 // Show cart at all times
 // specificity so it only affects the page if the user menu is active
-.absolute-cart-box > div {
+.sqs-pill-shopping-cart {
   display: block!important;
   visibility: visible!important;
   opacity: 1!important;
   
   // .sqs-pill-shopping-cart-content
-  min-width: 220px;
+  min-width: 0;
   border-radius: 3px;
   height: 26px;
   cursor: pointer;
   white-space: nowrap;
   line-height: 18px;
   font-size: 12px;
-  padding: 10px 15px;
+  padding: 6px 10px;
 
   // .sqs-pill-shopping-cart-content.dark
   box-shadow: 0 0 0 1px rgba(0,0,0,.085), 0 1px 0 0 rgba(0,0,0,.15);
@@ -76,6 +76,15 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   color: #ddd;
   background-color: #111;
   background-image: linear-gradient(#1e1e1e,#040404);
+
+  .subtotal {
+    position: static;
+    margin-left: 12px;
+
+    .price {
+      float: none;
+    }
+  }
 }
 
 .sqs-pill-shopping-cart-content {
@@ -84,6 +93,9 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   height: auto;
   padding: 0;
   display: inline-block;
+  display: flex;
+  align-items: baseline;
+  transform: scale(1);
 
   &.dark {
     box-shadow: none;
@@ -96,6 +108,6 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
 
 @media only screen and (min-width: 700px) {
   .top-navigation-position-above-banner .absolute-cart-box {
-    top: 25px;
+    top: 13px;
   }
 }
