--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -41,15 +41,20 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   display: inline-block;
 }
 .user-account-link {
-  opacity: 0;
 
-  &.loaded {
-    opacity: 1;
-    transition: 100ms opacity linear;
+  .placeholder {
+    cursor: default;
+    color: #888;
   }
 
   a {
+    display: none;
     color: #ddd;
+  }
+
+  &.loaded {
+    a { display: inline; }
+    .placeholder { display: none; }
   }
 }
 
