--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -69,20 +69,22 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
 // Show cart at all times
 // specificity so it only affects the page if the user menu is active
 .sqs-pill-shopping-cart {
-  visibility: visible!important;
-  opacity: 1!important;
-  display: flex!important;
+  visibility: visible !important;
+  opacity: 1 !important;
+  transform: scale(1) !important;
+  display: flex !important;
   align-items: center;
   
   // .sqs-pill-shopping-cart-content
   min-width: 0;
+  max-width: ~"calc(100% - 20px)"; // acount for padding
   border-radius: 3px;
   height: 26px;
   cursor: pointer;
   white-space: nowrap;
   line-height: 18px;
   font-size: 12px;
-  padding: 6px 10px;
+  padding: 4px 10px;
 
   // .sqs-pill-shopping-cart-content.dark
   box-shadow: 0 0 0 1px rgba(0,0,0,.085), 0 1px 0 0 rgba(0,0,0,.15);
@@ -111,8 +113,10 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   height: auto;
   padding: 0;
   display: flex;
-  align-items: baseline;
-  transform: scale(1);
+  align-items: center;
+  flex: 0 1 100%;
+
+  &:focus { outline: thin dotted; }
 
   &.dark {
     box-shadow: none;
@@ -122,7 +126,11 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
     background-image: none;
   }
 }
-
+@media only screen and (max-width: 700px) {
+  .absolute-cart-box {
+    right: 0;
+  }
+}
 @media only screen and (min-width: 700px) {
   .top-navigation-position-above-banner .absolute-cart-box {
     top: 13px;
