--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -94,15 +94,33 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   background-image: linear-gradient(#1e1e1e,#040404);
 
   .icon {
-    top: 2px;
+    top: auto;
+    width: 1.25em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 10px;
+    text-align: center;
+    
+    &.icon-shopping-cart {
+      font-size: 18px;
+      background-image: none;
+    }
+  }
+
+  .details {
+    margin-left: 10px;
+    flex: 0 1 100%;
   }
 
   .subtotal {
     position: static;
     margin-left: 12px;
+    top: auto;
+    right: auto;
 
     .price {
       float: none;
+      line-height: normal;
     }
   }
 }
