Hide items and subtotal if cart is empty

--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -123,6 +123,13 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
       line-height: normal;
     }
   }
+
+  &.cart-empty .sqs-pill-shopping-cart-content {
+    .details,
+    .subtotal {
+      display: none;
+    }
+  }
 }
 
 .sqs-pill-shopping-cart-content {
