--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -77,7 +77,7 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   
   // .sqs-pill-shopping-cart-content
   min-width: 0;
-  max-width: ~"calc(100% - 20px)"; // acount for padding
+  max-width: ~"calc(100% - 22px)"; // acount for padding
   border-radius: 3px;
   height: 26px;
   cursor: pointer;
@@ -91,7 +91,8 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   border: 1px solid rgba(255,255,255,.05);
   color: #ddd;
   background-color: #111;
-  background-image: linear-gradient(#1e1e1e,#040404);
+  background-image: none; //linear-gradient(#1e1e1e,#040404);
+  background-color: rgba(17, 17, 17, 0.9);
 
   .icon {
     top: auto;
@@ -121,6 +122,7 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
     .price {
       float: none;
       line-height: normal;
+      font-size: 14px;
     }
   }
 
@@ -154,6 +156,9 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
 @media only screen and (max-width: 700px) {
   .absolute-cart-box {
     right: 0;
+  }
+  .sqs-pill-shopping-cart {
+    background-color: rgba(17, 17, 17, 1);
   }
 }
 @media only screen and (min-width: 700px) {
