Fixed focus style

--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -97,9 +97,8 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   .icon {
     top: auto;
     width: 1.25em;
-    margin-left: 0;
+    margin-left: 10px;
     margin-right: 0;
-    padding-left: 10px;
     text-align: center;
     
     &.icon-shopping-cart {
