prevent account navigation FOUT

--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -38,9 +38,7 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
 
 // Fade-in sign-in link
 #account-navigation {
-  display: inline-block;
-  border-right: 1px solid #888;
-  padding-right: 10px;
+  display: none;
 }
 
 .user-account-link {
@@ -93,6 +91,12 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   background-color: #111;
   background-image: none; //linear-gradient(#1e1e1e,#040404);
   background-color: rgba(17, 17, 17, 0.9);
+
+  #account-navigation {
+    display: inline-block;
+    border-right: 1px solid #888;
+    padding-right: 10px;
+  }
 
   .icon {
     top: auto;
