Make sure no image shown under cart

--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -108,6 +108,8 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
     &.icon-shopping-cart {
       font-size: 18px;
       background-image: none;
+      background-size: 0;
+      background: none;
     }
   }
 
