--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -36,9 +36,29 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   }
 }
 
-// Fade-in sign-in link
 #account-navigation {
   display: none;
+}
+@media screen and (min-width: 641px) {
+  body > #account-navigation {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 13px;
+    right: 11px;
+    z-index: 15000;
+    border-radius: 3px;
+    height: 26px;
+    cursor: pointer;
+    white-space: nowrap;
+    line-height: 18px;
+    font-size: 12px;
+    padding: 4px 10px;
+    box-shadow: none; //0 0 0 1px rgba(194, 194, 194, 0.085), 0 1px 0 0 rgba(194, 194, 194, 0.15);
+    border: 1px solid rgba(255,255,255, .05);
+    color: #333;
+    background-color: rgba(255,255,255, .92);
+  }
 }
 
 .user-account-link {
