min-width 2-icons

--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -94,7 +94,7 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   align-items: center;
   
   // .sqs-pill-shopping-cart-content
-  min-width: 0;
+  min-width: 66px;
   max-width: ~"calc(100% - 22px)"; // acount for padding
   border-radius: 3px;
   height: 26px;
