--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -85,7 +85,6 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
 }
 
 // Show cart at all times
-// specificity so it only affects the page if the user menu is active
 .sqs-pill-shopping-cart {
   visibility: visible !important;
   opacity: 1 !important;
@@ -109,7 +108,7 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
   border: 1px solid rgba(255,255,255,.05);
   color: #ddd;
   background-color: #111;
-  background-image: none; //linear-gradient(#1e1e1e,#040404);
+  background-image: none;
   background-color: rgba(17, 17, 17, 0.9);
 
   #account-navigation {
