--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -171,10 +171,10 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
     }
   }
 
-  &.cart-empty .sqs-pill-shopping-cart-content {
+  &.cart-visible .sqs-pill-shopping-cart-content {
     .details,
     .subtotal {
-      display: none;
+      display: inline;
     }
   }
 }
@@ -196,6 +196,11 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
     color: inherit;
     background-color: transparent;
     background-image: none;
+  }
+
+  .details,
+  .subtotal {
+    display: none;
   }
 }
 @media only screen and (max-width: 700px) {
