fixed modal overlay

--- a/styles/halorituals.com.less
+++ b/styles/halorituals.com.less
@@ -108,6 +108,10 @@ body.banner-content-empty.canvas-setting-full-width.top-navigation-alignment-lef
 //
 // Shopping Cart
 //
+.absolute-cart-box {
+  z-index: 9994; //15000; // messed with modal
+}
+
 .sqs-pill-shopping-cart {
   // Show cart at all times
   visibility: visible !important;
